# aws-transcribe-poc

./: .env.local.template  index.html  package.json
infra/: .gitignore  README.md  identity_pool.tf  set_environment.sh
lambda_functions/src/: .env.template  .gitignore  app.py  package.json  pyproject.toml  requirements.txt  serverless.yml
src/: App.tsx  config.ts  constants.ts  main.tsx
src/utils/: credentials.ts  recorder.ts  streamer.ts  transcriber.ts
